lab2: fix secret key calculation

--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns_to_keep = ['Major_category', 'Major', 'Total', 'Men', 'Women',\n",
+    "columns_to_keep = ['Rank', 'Major_category', 'Major', 'Total', 'Men', 'Women',\n",
     "                   'Employed', 'Unemployed', 'Full_time', 'Part_time']\n",
     "df = df[columns_to_keep]\n",
     "\n",
@@ -67,7 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_eng = df[df['Major_category'] == 'Engineering'].copy()"
+    "df_eng = df[df['Major_category'] == 'Engineering'].copy()\n",
+    "df_eng = df_eng.reset_index(drop=True)"
    ]
   },
   {
@@ -187,7 +188,7 @@
    "id": "dba66cd8-4887-40dc-9f5c-35a0c90a2361",
    "metadata": {},
    "source": [
-    "Здобувач 2 (Коляда) — розрахунок secret key"
+    "Здобувач 2 (Коляда) — розрахунок secret key (треба множення, а не сума)"
    ]
   },
   {
@@ -198,7 +199,11 @@
    "outputs": [],
    "source": [
     "lowest_employment = df_eng.nsmallest(6, 'Employment_rate')\n",
-    "secret_key = lowest_employment.index.to_numpy().sum()\n",
+    "\n",
+    "print(\"Шість спеціальностей з найнижчим рівнем працевлаштування:\")\n",
+    "print(lowest_employment)\n",
+    "\n",
+    "secret_key = lowest_employment.index.to_numpy().prod()\n",
     "print(f\"Secret key: {secret_key}\")"
    ]
   },
@@ -227,6 +232,12 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2223983e-9f77-477d-8376-c4ff2032b099",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
