--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns_to_keep = ['Rank', 'Major_category', 'Major', 'Total', 'Men', 'Women',\n",
+    "columns_to_keep = ['Rank', 'Major_category', 'Major', 'Total', 'Median', 'Men', 'Women',\n",
     "                   'Employed', 'Unemployed', 'Full_time', 'Part_time']\n",
     "df = df[columns_to_keep]\n",
     "\n",
@@ -237,7 +237,69 @@
    "cell_type": "markdown",
    "id": "2223983e-9f77-477d-8376-c4ff2032b099",
    "metadata": {},
-   "source": []
+   "source": [
+    "Контрольне запитання\n",
+    "---\n",
+    "\n",
+    "### Як співвідноситься частка жінок у спеціальності з медіанним заробітком випускників?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc15fe98-109e-4940-8589-c61eb4ec356e",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(df.columns)\n",
+    "\n",
+    "df['ShareWomen'] = df['Women'] / df['Total']\n",
+    "correlation = df[['ShareWomen', 'Median']].corr()\n",
+    "print(\"Кореляція між часткою жінок та медіанним заробітком:\")\n",
+    "print(correlation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aee7a13-80af-46df-b4be-42bba6af285a",
+   "metadata": {},
+   "source": [
+    "### Чи є суттєва різниця у медіанному заробітку між різними категоріями спеціальностей?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdc0cbd8-0de0-4b79-9c55-8774db25c3aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_salaries = df.groupby('Major_category')['Median'].median().sort_values(ascending=False)\n",
+    "\n",
+    "median_salaries_df = median_salaries.reset_index()\n",
+    "median_salaries_df.columns = ['Major_category', 'Median_salary']\n",
+    "\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.figure(figsize=(12,6))\n",
+    "\n",
+    "sns.barplot(\n",
+    "    data=median_salaries_df,\n",
+    "    x='Median_salary',\n",
+    "    y='Major_category',\n",
+    "    color='steelblue'\n",
+    ")\n",
+    "\n",
+    "plt.title(\"Медіанний заробіток за категоріями спеціальностей\")\n",
+    "plt.xlabel(\"Медіанн зарплата\")\n",
+    "plt.ylabel(\"Категорія\")\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
